# Garda_Test_Tasks

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CalcServer.cpp  Dockerfile  HelloWord.sln  HelloWord.vcxproj  HelloWord.vcxproj.filters  LinServer.cpp  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  calc.cpp  cmake_install.cmake  hello.cpp
